--- a/syllabus.html
+++ b/syllabus.html
@@ -81,7 +81,7 @@
         <li> Adding elements
         <li> Removing elements
         <li> Sorting with <code>sort()</code> and <code>sorted()</code>
-        <li> Turning a list into a nice(r) string with .join()
+        <li> Turning a list into a nice(r) string with str.join()
         <li> Anonymous vs. named variables
       </ol>
 
